--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blazinbuffaloes-site",
-  "homepage": "https://schwjustin.github.io/blazinbuffaloes",
+  "homepage": "https://blazinbuffaloes.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
