--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "ethers": "^5.5.2",
-    "node-sass": "^7.0.1",
+    "ethers": "^5.5.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-parallax-tilt": "^1.5.84",
-    "react-scripts": "^3.0.1",
-    "react-vanilla-tilt": "^1.0.0",
-    "sass": "^1.45.0",
-    "web-vitals": "^2.1.2"
+    "react-scripts": "5.0.0",
+    "sass": "^1.47.0",
+    "web-vitals": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
